[package]
name = "lindera-wiki-tokenize"
version = "0.1.0"
authors = ["Jun Ohtani <johtani@gmail.com>"]
description = "Wikipedia text "
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.41"
lindera = "0.5.1"
clap = "2.33.0"
glob = "0.3.0"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.58"
log = "0.4.11"
env_logger = "0.7.1"
rayon ="1.4.1"
